--- a/index.html
+++ b/index.html
@@ -1333,10 +1333,7 @@
     <img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7" id="img-emoji-default"/>
 
     
-    <script src="src/util/Format.js"></script>
-    <script src="src/controller/CameraController.js"></script>
-    <script src="src/controller/WhatsAppController.js"></script>
-    <script src="src/app.js"></script>
+    <script src="dist/bundle.js"></script>
 </body>
 
 </html>
